# virtual_therac-25_classC

./: .clang-format  .clang-tidy  .gitignore  .markdownlint-cli2.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DEVELOPMENT_STEPS.md  README.md  UPSTREAM_FEEDBACK.md  lychee.toml  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: change_request.md  config.yml  problem_report.md
.github/workflows/: cpp-build.yml  docs-check.yml
5.1_software_development_planning/: software_development_plan.md
5.2_software_requirements_analysis/: software_requirements_specification.md
5.3_software_architecture_design/: software_architecture_design.md
5.4_software_detailed_design/: software_detailed_design.md
5.5_software_unit_implementation/: software_unit_test_plan_report.md
5.6_software_integration_testing/: software_integration_test_plan_report.md
5.7_software_system_testing/: software_system_test_plan_report.md
5.8_software_release/: software_master_specification.md
6_software_maintenance_process/: software_maintenance_plan.md
7_software_risk_management_process/: risk_management_file.md  software_risk_management_plan.md  software_safety_class_determination_record.md
8_software_configuration_management_process/: ccb_operating_rules.md  change_request_register.md  configuration_item_list.md  software_configuration_management_plan.md
9_software_problem_resolution_process/: software_problem_resolution_procedure.md
compliance/: audit_checklist.md
scripts/: setup_branch_protection.sh  setup_labels.sh
src/th25_ctrl/: CMakeLists.txt
src/th25_ctrl/include/th25_ctrl/: beam_controller.hpp  bending_magnet_manager.hpp  common_types.hpp  dose_manager.hpp  in_process_queue.hpp  safety_core_orchestrator.hpp  startup_self_check.hpp  treatment_mode_manager.hpp  turntable_manager.hpp  version.hpp
src/th25_ctrl/src/: beam_controller.cpp  bending_magnet_manager.cpp  dose_manager.cpp  safety_core_orchestrator.cpp  startup_self_check.cpp  treatment_mode_manager.cpp  turntable_manager.cpp  version.cpp
src/th25_sim/: CMakeLists.txt
src/th25_sim/include/th25_sim/: bending_magnet_sim.hpp  electron_gun_sim.hpp  ion_chamber_sim.hpp  sim_stub.hpp  turntable_sim.hpp
src/th25_sim/src/: bending_magnet_sim.cpp  electron_gun_sim.cpp  ion_chamber_sim.cpp  sim_stub.cpp  turntable_sim.cpp
tests/: CMakeLists.txt
tests/unit/: test_beam_controller.cpp  test_bending_magnet_manager.cpp  test_bending_magnet_sim.cpp  test_common_types.cpp  test_dose_manager.cpp  test_electron_gun_sim.cpp  test_in_process_queue.cpp  test_ion_chamber_sim.cpp  test_safety_core_orchestrator.cpp  test_smoke.cpp  test_startup_self_check.cpp  test_treatment_mode_manager.cpp  test_turntable_manager.cpp  test_turntable_sim.cpp
